--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Mallanna&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter&display=swap");
 
 html {
   overflow-y: scroll;
