Card: Style h1 with Tailwind

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ const { href, title, body } = Astro.props;
 
 <li class="link-card">
 	<a href={href}>
-		<h2>
+		<h2 class="m-0 text-xl transition-colors">
 			{title}
 			<span>&rarr;</span>
 		</h2>
@@ -42,11 +42,6 @@ const { href, title, body } = Astro.props;
 		color: #111;
 		background-color: white;
 		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
 	p {
 		margin-top: 0.5rem;
