--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import Footer from "../components/Footer.astro";
+import Title from "../components/Title.astro";
+import NavBar from "../components/NavBar.astro";
+
 export interface Props {
   title: string;
 }
@@ -16,7 +20,14 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <div class="flex flex-col h-screen">
+      <Title />
+      <NavBar />
+      <div class="mb-auto">
+        <slot />
+      </div>
+      <Footer />
+    </div>
   </body>
 </html>
 <style is:global>
