Link to target page from NavBar
Close #9

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,8 +4,12 @@
 <div>
   <nav>
     <ul class="flex flex-row justify-center space-x-2">
-      <li>Writings</li>
-      <li>Projects</li>
+      <li>
+        <a href="/writings">Writings</a>
+      </li>
+      <li>
+        <a href="/projects">Projects</a>
+      </li>
     </ul>
   </nav>
 </div>
