--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -2,6 +2,8 @@
 ---
 
 <div class="text-center mx-auto my-2">
-  <div>Shi Han NG</div>
-  <div>Software Engineer</div>
+  <a href="/">
+    <div>Shi Han NG</div>
+    <div>Software Engineer</div>
+  </a>
 </div>
