Create Link component

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,14 +1,15 @@
 ---
+import Link from "../components/Link.astro";
 ---
 
 <div>
   <nav>
     <ul class="flex flex-row justify-center space-x-2">
       <li>
-        <a href="/writings">Writings</a>
+        <Link href="/writings">Writings</Link>
       </li>
       <li>
-        <a href="/projects">Projects</a>
+        <Link href="/projects">Projects</Link>
       </li>
     </ul>
   </nav>
