--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,9 +1,10 @@
 ---
+import Link from "../components/Link.astro";
 ---
 
 <div class="text-center mx-auto my-2">
-  <a href="/">
+  <Link href="/">
     <div>Shi Han NG</div>
     <div>Software Engineer</div>
-  </a>
+  </Link>
 </div>
