Use permanent-marker as font on "brand"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "@fontsource/permanent-marker";
 ---
 
 <html lang="en">
@@ -18,8 +19,9 @@
           class="max-w-screen-lg w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between"
           aria-label="Global"
         >
-          <a class="flex-none text-xl font-semibold dark:text-white" href="#"
-            >Shi Han NG</a
+          <a
+            class="font-hand flex-none text-2xl font-semibold dark:text-white"
+            href="#">Shi Han NG</a
           >
           <div
             class="flex flex-row items-center gap-5 mt-5 sm:justify-end sm:mt-0 sm:pl-5"
