Refactor out Footer components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/permanent-marker";
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "Shi Han NG";
 ---
 
@@ -124,12 +125,7 @@ const pageTitle = "Shi Han NG";
         risus augue, vel auctor augue tincidunt quis. Sed imperdiet lectus sed
         nunc molestie, nec scelerisque justo tincidunt.
       </main>
-
-      <footer class="text-center w-full">
-        <div class="container mx-auto max-w-screen-lg py-4">
-          <p>&copy; 2023 Your Name. All rights reserved.</p>
-        </div>
-      </footer>
+      <Footer />
     </div>
     <script>
       import "preline/dist/preline.js";
