--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/permanent-marker";
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "Now | Shi Han NG";
 ---
 
@@ -34,12 +35,7 @@ const pageTitle = "Now | Shi Han NG";
       >
         ...
       </main>
-
-      <footer class="text-center w-full">
-        <div class="container mx-auto max-w-screen-lg py-4">
-          <p>&copy; 2023 Your Name. All rights reserved.</p>
-        </div>
-      </footer>
+      <Footer />
     </div>
     <script>
       import "preline/dist/preline.js";
