--- a/src/pages/ramblings.astro
+++ b/src/pages/ramblings.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/permanent-marker";
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "Ramblings | Shi Han NG";
 ---
 
@@ -36,12 +37,7 @@ const pageTitle = "Ramblings | Shi Han NG";
           <li><a href="/posts/test/">Test post</a></li>
         </ul>
       </main>
-
-      <footer class="text-center w-full">
-        <div class="container mx-auto max-w-screen-lg py-4">
-          <p>&copy; 2023 Your Name. All rights reserved.</p>
-        </div>
-      </footer>
+      <Footer />
     </div>
     <script>
       import "preline/dist/preline.js";
