--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import "@fontsource/permanent-marker";
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 const pageTitle = "Shi Han NG";
 ---
@@ -15,21 +15,7 @@ const pageTitle = "Shi Han NG";
   </head>
   <body>
     <div class="flex flex-col min-h-screen">
-      <header
-        class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white text-sm py-4 dark:bg-gray-800"
-      >
-        <nav
-          class="max-w-screen-lg w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between"
-          aria-label="Global"
-        >
-          <a
-            class="font-hand flex-none text-2xl font-semibold dark:text-white"
-            href="/">Shi Han NG</a
-          >
-          <Navigation />
-        </nav>
-      </header>
-
+      <Header />
       <main
         class="container mx-auto max-w-screen-lg flex-grow text-bright-gray p-4"
       >
