--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,7 +9,7 @@
   >
   <a
     class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-    href="#">Projects</a
+    href="/projects">Projects</a
   >
   <a
     class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
