--- a/src/pages/ramblings.astro
+++ b/src/pages/ramblings.astro
@@ -1,32 +1,10 @@
 ---
-import "@fontsource/permanent-marker";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Ramblings | Shi Han NG";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <div class="flex flex-col min-h-screen">
-      <Header />
-      <main
-        class="container mx-auto max-w-screen-lg flex-grow text-bright-gray p-4"
-      >
-        <ul>
-          <li><a href="/posts/test/">Test post</a></li>
-        </ul>
-      </main>
-      <Footer />
-    </div>
-    <script>
-      import "preline/dist/preline.js";
-    </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <ul>
+    <li><a href="/posts/test/">Test post</a></li>
+  </ul>
+</BaseLayout>
