--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Shi Han NG";
+const pageTitle = "Now";
 ---
 
 <BaseLayout pageTitle={pageTitle}>...</BaseLayout>
