--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Projects | Shi Han NG";
+const pageTitle = "Projects";
 ---
 
 <BaseLayout pageTitle={pageTitle}>WIP projects</BaseLayout>
