--- a/src/pages/ramblings.astro
+++ b/src/pages/ramblings.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Ramblings | Shi Han NG";
+const pageTitle = "Ramblings";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
