--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Shi Han NG";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
+<BaseLayout>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam est ipsum,
   porta a fermentum ut, posuere sed arcu. Curabitur sed ligula malesuada,
   finibus ex at, sodales purus. Curabitur facilisis purus nisi, eu bibendum dui
