--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,22 +1,12 @@
 ---
+import NavLink from "./NavLink.astro";
 ---
 
 <div
   class="flex flex-row items-center gap-5 mt-5 sm:justify-end sm:mt-0 sm:pl-5"
 >
-  <a class="font-medium text-blue-500" href="/ramblings" aria-current="page"
-    >Ramblings</a
-  >
-  <a
-    class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-    href="/projects">Projects</a
-  >
-  <a
-    class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-    href="/now">Now</a
-  >
-  <a
-    class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-    href="#">Contact</a
-  >
+  <NavLink path="/ramblings">Ramblings</NavLink>
+  <NavLink path="/projects">Projects</NavLink>
+  <NavLink path="/now">Now</NavLink>
+  <NavLink path="#">Contact</NavLink>
 </div>
