--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -5,7 +5,8 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <h1>{frontmatter.title}</h1>
-  <p>Written by {frontmatter.author}</p>
-  <slot />
+  <article class="prose max-w-none">
+    <h1>{frontmatter.title}</h1>
+    <slot />
+  </article>
 </BaseLayout>
