Align dark-mode toggle to the right

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,7 +10,7 @@ import NavLink from "./NavLink.astro";
   <NavLink path="/now">Now</NavLink>
   <NavLink path="#">Contact</NavLink>
   <a
-    class="hs-dark-mode-active:hidden block hs-dark-mode group flex items-center text-gray-600 hover:text-blue-600 font-medium dark:text-gray-400 dark:hover:text-gray-500"
+    class="hs-dark-mode-active:hidden block hs-dark-mode group flex items-center text-gray-600 hover:text-blue-600 font-medium dark:text-gray-400 dark:hover:text-gray-500 ml-auto"
     href="#!"
     data-hs-theme-click-value="dark"
   >
@@ -28,7 +28,7 @@ import NavLink from "./NavLink.astro";
     </svg>
   </a>
   <a
-    class="hs-dark-mode-active:block hidden hs-dark-mode group flex items-center text-gray-600 hover:text-blue-600 font-medium dark:text-gray-400 dark:hover:text-gray-500"
+    class="hs-dark-mode-active:block hidden hs-dark-mode group flex items-center text-gray-600 hover:text-blue-600 font-medium dark:text-gray-400 dark:hover:text-gray-500 ml-auto"
     href="#!"
     data-hs-theme-click-value="light"
   >
