--- a/src/pages/ramblings.astro
+++ b/src/pages/ramblings.astro
@@ -8,6 +8,7 @@ type Blog = {
   imgAlt?: string;
   title: string;
   teaser: string;
+  url: string;
 };
 
 const blogs: Blog[] = [
@@ -18,6 +19,7 @@ const blogs: Blog[] = [
     title: "Studio by Preline",
     teaser:
       "Produce professional, reliable streams easily leveraging Preline's innovative broadcast studio",
+    url: "./posts/test",
   },
   {
     imgSrc:
@@ -26,6 +28,7 @@ const blogs: Blog[] = [
     title: "Onsite",
     teaser:
       "Optimize your in-person experience with best-in-class capabilities like badge printing and lead retrieval",
+    url: "./posts/test",
   },
   {
     imgSrc:
@@ -33,6 +36,7 @@ const blogs: Blog[] = [
     imgAlt: "Image Description",
     title: " The complete guide to OKRs",
     teaser: " How to make objectives and key results work for your company",
+    url: "./posts/test",
   },
   {
     imgSrc:
@@ -40,6 +44,7 @@ const blogs: Blog[] = [
     imgAlt: "Image Description",
     title: "People program models",
     teaser: "Six approaches to bringing your People strategy to life",
+    url: "./posts/test",
   },
 ];
 ---
@@ -48,8 +53,8 @@ const blogs: Blog[] = [
   <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
     <div class="grid lg:grid-cols-2 lg:gap-y-16 gap-10">
       {
-        blogs.map(({ imgSrc, imgAlt, title, teaser }) => (
-          <BlogCard imgSrc={imgSrc} imgAlt={imgAlt} title={title}>
+        blogs.map(({ imgSrc, imgAlt, title, teaser, url }) => (
+          <BlogCard imgSrc={imgSrc} imgAlt={imgAlt} title={title} url={url}>
             {teaser}
           </BlogCard>
         ))
