--- a/src/pages/ramblings.astro
+++ b/src/pages/ramblings.astro
@@ -19,7 +19,7 @@ const blogs: Blog[] = [
     title: "Studio by Preline",
     teaser:
       "Produce professional, reliable streams easily leveraging Preline's innovative broadcast studio",
-    url: "./posts/test",
+    url: "./ramblings/test",
   },
   {
     imgSrc:
@@ -28,7 +28,7 @@ const blogs: Blog[] = [
     title: "Onsite",
     teaser:
       "Optimize your in-person experience with best-in-class capabilities like badge printing and lead retrieval",
-    url: "./posts/test",
+    url: "./ramblings/test",
   },
   {
     imgSrc:
@@ -36,7 +36,7 @@ const blogs: Blog[] = [
     imgAlt: "Image Description",
     title: " The complete guide to OKRs",
     teaser: " How to make objectives and key results work for your company",
-    url: "./posts/test",
+    url: "./ramblings/test",
   },
   {
     imgSrc:
@@ -44,7 +44,7 @@ const blogs: Blog[] = [
     imgAlt: "Image Description",
     title: "People program models",
     teaser: "Six approaches to bringing your People strategy to life",
-    url: "./posts/test",
+    url: "./ramblings/test",
   },
 ];
 ---
