Use Fira Sans as main Sans font

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource/permanent-marker";
+import "@fontsource/fira-sans";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
