--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ import NavLink from "./NavLink.astro";
   <NavLink path="/ramblings">Ramblings</NavLink>
   <NavLink path="/projects">Projects</NavLink>
   <NavLink path="/now">Now</NavLink>
-  <NavLink path="#">Contact</NavLink>
+  <NavLink path="/contact">Contact</NavLink>
   <a
     class="hs-dark-mode-active:hidden block hs-dark-mode group flex items-center text-gray-600 hover:text-blue-600 font-medium dark:text-gray-400 dark:hover:text-gray-500 ml-auto"
     href="#!"
