--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,49 +1,13 @@
 ---
-import { Icon } from "astro-icon";
-import FooterIcon from "./FooterIcon.astro";
-
+import Contacts from "../components/Contacts.astro";
 const year = new Date().getFullYear();
 const name = "Shi Han NG";
 
-type Contacts = {
-  iconName: string;
-  url: string;
-};
+interface Props {
+  hasSocial?: boolean;
+}
 
-const contacts: Contacts[] = [
-  {
-    url: "https://github.com/shihanng",
-    iconName: "la:github",
-  },
-  {
-    url: "https://www.linkedin.com/in/shihan-ng/",
-    iconName: "la:linkedin",
-  },
-  {
-    url: "https://twitter.com/shihanng",
-    iconName: "la:twitter",
-  },
-  {
-    url: "https://dev.to/shihanng",
-    iconName: "la:dev",
-  },
-  {
-    url: "https://medium.com/@shihanng",
-    iconName: "la:medium",
-  },
-  {
-    url: "https://www.instagram.com/shihanng/",
-    iconName: "la:instagram",
-  },
-  {
-    url: "https://keybase.io/shihanng",
-    iconName: "la:keybase",
-  },
-  {
-    url: "mailto:shihanng@gmail.com",
-    iconName: "la:envelope",
-  },
-];
+const { hasSocial = true } = Astro.props;
 ---
 
 <footer class="mt-auto w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto">
@@ -57,23 +21,16 @@ const contacts: Contacts[] = [
           >CC BY-NC 4.0</a
         >
       </p>
-      <p class="text-gray-500">
-        Always happy to connect! Feel free to reach out on the following
-        platforms.
-      </p>
-    </div>
-
-    <!-- Social Brands -->
-    <div class="mt-3 space-x-2">
       {
-        contacts.map(({ iconName, url }) => (
-          <FooterIcon url={url}>
-            <Icon name={iconName} />
-          </FooterIcon>
-        ))
+        hasSocial ? (
+          <p class="text-gray-500">
+            Always happy to connect! Feel free to reach out on the following
+            platforms.
+          </p>
+        ) : null
       }
     </div>
-    <!-- End Social Brands -->
+    {hasSocial ? <Contacts /> : null}
   </div>
   <!-- End Grid -->
 </footer>
