--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,9 +6,10 @@ import Footer from "../components/Footer.astro";
 
 interface Props {
   pageTitle?: string;
+  hasSocial?: boolean;
 }
 
-const { pageTitle } = Astro.props;
+const { pageTitle, hasSocial } = Astro.props;
 const baseTitle = "Shi Han NG";
 const title = pageTitle ? `${pageTitle} | ${baseTitle}` : baseTitle;
 ---
@@ -25,11 +26,11 @@ const title = pageTitle ? `${pageTitle} | ${baseTitle}` : baseTitle;
     <div class="flex flex-col min-h-screen">
       <Header />
       <main
-        class="container mx-auto max-w-screen-lg flex-grow text-bright-gray p-4"
+        class="container mx-auto max-w-screen-lg flex-grow text-bright-gray p-4 min-h-full"
       >
         <slot />
       </main>
-      <Footer />
+      <Footer hasSocial={hasSocial} />
     </div>
     <script>
       import "preline/dist/preline.js";
